<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SettingActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            tools:ignore="MissingConstraints"
            android:visibility="gone"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="56dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="@string/lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/languageView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <Switch
                    android:text="@string/nightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="282dp"
                    tools:layout_editor_absoluteX="182dp" android:id="@+id/nightModeView"
                    style="@style/setting_item" android:checked="false"/>
            <View style="@style/divider_setting" />
            <Switch
                    android:text="@string/phone_detect_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/useNumberDbView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <TextView
                    android:text="@string/black_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/openblackListView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <TextView
                    android:text="@string/backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/backupView"
                    style="@style/setting_item" android:visibility="gone"/>
            <View style="@style/divider_setting" />
            <TextView
                    android:text="@string/setting_reset_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resetView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <Switch
                    android:text="@string/send_confirm_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/doubleClickView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <Switch
                    android:text="@string/use_my_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/useMyContactsView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <Switch
                android:text="@string/hide_start_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showStartActivity"
                style="@style/setting_item"/>
            <View style="@style/divider_setting" />
            <TextView
                    android:text="@string/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/openAboutView"
                    style="@style/setting_item"/>
            <View style="@style/divider_setting" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>