<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.GraphicSettingActivity" android:background="@color/nightTheme">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/night_toolbar"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            tools:ignore="MissingConstraints"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="@string/nightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" android:textColor="@android:color/holo_blue_light"/>
            <Switch
                    android:id="@+id/nightSwitch"
                    android:text="@string/nightMode"
                    android:onClick="nightModeClick"
                    style="@style/setting_item_night" />
            <Switch
                    android:text="@string/night_table"
                    style="@style/setting_item_night"
                    android:onClick="nightTableClick"
                    android:id="@+id/night_table_switch"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/start_table"
                        style="@style/setting_item_night"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:onClick="startTableClick"
                        android:text="@string/start" />

                <TextView
                        android:id="@+id/end_table"
                        style="@style/setting_item_night"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:onClick="endTableClick"
                        android:text="@string/end" />
            </LinearLayout>

            <TextView
                    android:text="@string/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" android:textColor="@android:color/holo_blue_light"/>
            <TextView
                    android:text="@string/lang"
                    android:onClick="languageClick"
                    style="@style/setting_item_night"/>

            <Switch
                    android:id="@+id/logoSwitch"
                    android:text="@string/hide_start_activity"
                    android:onClick="hideLogoClick"
                    style="@style/setting_item_night" />

            <TextView
                    android:text="@string/font_size"
                    android:onClick="fontClick"
                    style="@style/setting_item_night" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>