<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ContactsSettingActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            tools:ignore="MissingConstraints"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Switch
                    android:id="@+id/whoSwitch"
                    android:text="@string/who_phone"
                    android:onClick="whophoneClick"
                    style="@style/setting_item" />
            <View style="@style/divider_setting" />

            <Switch
                    android:text="@string/use_contacts"
                    style="@style/setting_item"
                    android:onClick="useContactClick"
                    android:id="@+id/use_contacts_switch"/>
            <View style="@style/divider_setting" />

            <TextView
                    android:text="@string/db_update"
                    style="@style/setting_item"
                    android:onClick="dbUpdateClick"
                    android:id="@+id/update_db"/>
            <View style="@style/divider_setting" />

            <TextView
                    android:text="@string/black_list"
                    style="@style/setting_item"
                    android:onClick="openBlackList"
                    android:id="@+id/black_list"/>
            <View style="@style/divider_setting"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>